front : fix sidemenu z-index

--- a/src/sass/components/_Modal.scss
+++ b/src/sass/components/_Modal.scss
@@ -7,20 +7,21 @@
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  z-index: 10;
+  z-index: 90;
 }
 
 .modal--box {
+  position: absolute;
+  z-index: 91;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: v.$color2;
   width: 90%;
   max-width: 450px;
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   input,
   select {
     padding: 0.3rem;
